.k8s-resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: clickhouse-github-importer
  name: clickhouse-github-importer
  namespace: allspark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse-github-importer
  template:
    metadata:
      labels:
        app: clickhouse-github-importer
    spec:
      nodeSelector:
        node-name: node4
      imagePullSecrets:
        - name: xlab-registry-harbor
      containers:
        - name: clickhouse-github-importer
          image: harbor.ioedu.net/allspark/clickhouse-github-importer:latest
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /root/GHA_DATA
              name: gha-data
      volumes:
        - name: gha-data
          hostPath:
            path: /home/xlab/Data/GHA_DATA
